--- a/.env.example
+++ b/.env.example
@@ -9,6 +9,7 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 TELEGRAM_BOT_TOKEN=
+TELEGRAM_CHANNEL_ID=
 
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
